All: Fix invisible list numbers due to partial `#content ol > li` styles
Follows-up 91314224af9 and a4e2aaa1f60a, which adopted `::marker`
but this left behind one style rule, causing the numbers to be hidden
(list-style: none), without the old grey circles or counter to
re-generate the numbers.

--- a/themes/jquery/css/base.css
+++ b/themes/jquery/css/base.css
@@ -1400,12 +1400,8 @@ pre b {
 }
 
 #content ol > li {
-	position: relative; /* Give each list item a left margin to make room for the numbers */
-	list-style: none;
 	padding-left: 10px;
-	margin-right: 0;
 	margin-top: 5px;
-	margin-left: 30px;
 }
 
 #content img.full,
